--- a/package_spatialmedialab_index.json.in
+++ b/package_spatialmedialab_index.json.in
@@ -21,7 +21,7 @@
       "toolsDependencies": [{
           "packager": "spatialmedialab",
           "name": "CMSIS",
-          "version": "5.4.0"
+          "version": "5.7.0"
         },
         {
           "packager": "spatialmedialab",
@@ -31,7 +31,7 @@
         {
           "packager": "spatialmedialab",
           "name": "arm-none-eabi-gcc",
-          "version": "10-2020q4"
+          "version": "10.3-2021.07"
         },
         {
           "packager": "spatialmedialab",
@@ -42,55 +42,35 @@
     }],
     "tools": [{
         "name": "CMSIS",
-        "version": "5.4.0",
+        "version": "5.7.0",
         "systems": [{
             "host": "i686-mingw32",
-            "url": "https://github.com/ARM-software/CMSIS_5/archive/5.4.0.tar.gz",
-            "archiveFileName": "CMSIS_5-5.4.0.tar.gz",
-            "checksum": "SHA-256:93d09907ceb23a520ef65e6b5014d2e866efa6b7f5fe5d8828b29bbc54dec697",
-            "size": "153772853"
+            "url": "https://github.com/adafruit/arduino-board-index/releases/download/build-tools/ARM.CMSIS.5.7.0.zip",
+            "archiveFileName": "ARM.CMSIS.5.7.0.zip",
+            "checksum": "SHA-256:2518a8b66439b0814f27ddda1d38b890d0f601a25778378a6117e7dd393afc44",
+            "size": "117164633"
           },
           {
             "host": "x86_64-apple-darwin",
-            "url": "https://github.com/ARM-software/CMSIS_5/archive/5.4.0.tar.gz",
-            "archiveFileName": "CMSIS_5-5.4.0.tar.gz",
-            "checksum": "SHA-256:93d09907ceb23a520ef65e6b5014d2e866efa6b7f5fe5d8828b29bbc54dec697",
-            "size": "153772853"
+            "url": "https://github.com/adafruit/arduino-board-index/releases/download/build-tools/ARM.CMSIS.5.7.0.zip",
+            "archiveFileName": "ARM.CMSIS.5.7.0.zip",
+            "checksum": "SHA-256:2518a8b66439b0814f27ddda1d38b890d0f601a25778378a6117e7dd393afc44",
+            "size": "117164633"
           },
           {
             "host": "x86_64-pc-linux-gnu",
-            "url": "https://github.com/ARM-software/CMSIS_5/archive/5.4.0.tar.gz",
-            "archiveFileName": "CMSIS_5-5.4.0.tar.gz",
-            "checksum": "SHA-256:93d09907ceb23a520ef65e6b5014d2e866efa6b7f5fe5d8828b29bbc54dec697",
-            "size": "153772853"
+            "url": "https://github.com/adafruit/arduino-board-index/releases/download/build-tools/ARM.CMSIS.5.7.0.zip",
+            "archiveFileName": "ARM.CMSIS.5.7.0.zip",
+            "checksum": "SHA-256:2518a8b66439b0814f27ddda1d38b890d0f601a25778378a6117e7dd393afc44",
+            "size": "117164633"
           },
-          {
-            "host": "i686-pc-linux-gnu",
-            "url": "https://github.com/ARM-software/CMSIS_5/archive/5.4.0.tar.gz",
-            "archiveFileName": "CMSIS_5-5.4.0.tar.gz",
-            "checksum": "SHA-256:93d09907ceb23a520ef65e6b5014d2e866efa6b7f5fe5d8828b29bbc54dec697",
-            "size": "153772853"
-          },
-          {
-            "host": "arm-linux-gnueabihf",
-            "url": "https://github.com/ARM-software/CMSIS_5/archive/5.4.0.tar.gz",
-            "archiveFileName": "CMSIS_5-5.4.0-adafruit.tar.gz",
-            "checksum": "SHA-256:93d09907ceb23a520ef65e6b5014d2e866efa6b7f5fe5d8828b29bbc54dec697",
-            "size": "153772853"
-          },
-          {
-            "host": "aarch64-linux-gnu",
-            "url": "https://github.com/ARM-software/CMSIS_5/archive/5.4.0.tar.gz",
-            "archiveFileName": "CMSIS_5-5.4.0.tar.gz",
-            "checksum": "SHA-256:93d09907ceb23a520ef65e6b5014d2e866efa6b7f5fe5d8828b29bbc54dec697",
-            "size": "153772853"
-          },
+
           {
             "host": "all",
-            "url": "https://github.com/ARM-software/CMSIS_5/archive/5.4.0.tar.gz",
-            "archiveFileName": "CMSIS_5-5.4.0.tar.gz",
-            "checksum": "SHA-256:93d09907ceb23a520ef65e6b5014d2e866efa6b7f5fe5d8828b29bbc54dec697",
-            "size": "153772853"
+            "url": "https://github.com/adafruit/arduino-board-index/releases/download/build-tools/ARM.CMSIS.5.7.0.zip",
+            "archiveFileName": "ARM.CMSIS.5.7.0.zip",
+            "checksum": "SHA-256:2518a8b66439b0814f27ddda1d38b890d0f601a25778378a6117e7dd393afc44",
+            "size": "117164633"
           }
         ]
       },
@@ -129,24 +109,24 @@
       },
       {
         "name": "arm-none-eabi-gcc",
-        "version": "10-2020q4",
+        "version": "10.3-2021.07",
         "systems": [{
             "host": "i686-mingw32",
-            "url": "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-win32.zip",
-            "archiveFileName": "gcc-arm-none-eabi-10-2020-q4-major-win32.zip",
-            "checksum": "MD5:5ee6542a2af847934177bc8fa1294c0d"
+            "url": "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.07/gcc-arm-none-eabi-10.3-2021.07-win32.zip",
+            "archiveFileName": "gcc-arm-none-eabi-10.3-2021.07-win32.zip",
+            "checksum": "MD5:fca12668002f8c52cfa174400fd2d03e"
           },
           {
             "host": "x86_64-apple-darwin",
-            "url": "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-mac.tar.bz2",
-            "archiveFileName": "gcc-arm-none-eabi-10-2020-q4-major-mac.tar.bz2",
-            "checksum": "MD5:e588d21be5a0cc9caa60938d2422b058"
+            "url": "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.07/gcc-arm-none-eabi-10.3-2021.07-mac-10.14.6.tar.bz2",
+            "archiveFileName": "gcc-arm-none-eabi-10.3-2021.07-mac-10.14.6.tar.bz2",
+            "checksum": "MD5:42d5f143cdc303d73a3602fa5052c790"
           },
           {
             "host": "x86_64-pc-linux-gnu",
-            "url": "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2",
-            "archiveFileName": "gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2",
-            "checksum": "MD5:8312c4c91799885f222f663fc81f9a31"
+            "url": "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.07/gcc-arm-none-eabi-10.3-2021.07-x86_64-linux.tar.bz2",
+            "archiveFileName": "gcc-arm-none-eabi-10.3-2021.07-x86_64-linux.tar.bz2",
+            "checksum": "MD5:b56ae639d9183c340f065ae114a30202"
           }
         ]
       },
