--- a/package_spatialmedialab_index.json.in
+++ b/package_spatialmedialab_index.json.in
@@ -4,17 +4,18 @@
     "maintainer": "spatialmedialab",
     "websiteURL": "https://spatialmedialab.org/",
     "email": "support@spatialmedialab.org",
-    "help": {
-      "online": "https://github.com/Spatial-Media-Lab/"
-    },
     "platforms": [{
       "name": "Spatial Media Lab Boards",
       "architecture": "samd",
       "version": "@@VERSION@@",
       "category": "spatialmedialab",
+      "help": {
+        "online": "https://github.com/Spatial-Media-Lab/"
+      },
       "url": "https://spatial-media-lab.github.io/download/spatialmedialab-samd-@@VERSION@@.tar.bz2",
       "archiveFileName": "spatialmedialab-samd-@@VERSION@@.tar.bz2",
       "checksum": "SHA-256:@@HASH@@",
+      "size": "@@SIZE@@",
       "boards": [{
         "name": "tracker"
       }],
@@ -114,18 +115,21 @@
             "host": "i686-mingw32",
             "url": "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.07/gcc-arm-none-eabi-10.3-2021.07-win32.zip",
             "archiveFileName": "gcc-arm-none-eabi-10.3-2021.07-win32.zip",
+            "size": "200645886",
             "checksum": "MD5:fca12668002f8c52cfa174400fd2d03e"
           },
           {
             "host": "x86_64-apple-darwin",
             "url": "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.07/gcc-arm-none-eabi-10.3-2021.07-mac-10.14.6.tar.bz2",
             "archiveFileName": "gcc-arm-none-eabi-10.3-2021.07-mac-10.14.6.tar.bz2",
+            "size": "158954942",
             "checksum": "MD5:42d5f143cdc303d73a3602fa5052c790"
           },
           {
             "host": "x86_64-pc-linux-gnu",
             "url": "https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.07/gcc-arm-none-eabi-10.3-2021.07-x86_64-linux.tar.bz2",
             "archiveFileName": "gcc-arm-none-eabi-10.3-2021.07-x86_64-linux.tar.bz2",
+            "size": "157161724",
             "checksum": "MD5:b56ae639d9183c340f065ae114a30202"
           }
         ]
@@ -137,18 +141,21 @@
             "host": "i686-mingw32",
             "url": "http://downloads.arduino.cc/tools/bossac-1.9.1-arduino1-windows.tar.gz",
             "archiveFileName": "bossac-1.9.1-arduino1-windows.tar.gz",
+            "size": "1260118",
             "checksum": "SHA-256:fe2d6ef78ca711c78e104e258357ed06b09e95e9356dc72d8d2c9f6670af4b7a"
           },
           {
             "host": "x86_64-apple-darwin",
             "url": "https://spatial-media-lab.github.io/download/bossac-1.9.1-osx.tar.gz",
             "archiveFileName": "bossac-1.9.1-osx.tar.gz",
+            "size": "46840",
             "checksum": "SHA-256:a99a893930ceac2b7aeb9f7517cc57d95818a46c7209fc5811d0aa47e7eb7b25"
           },
           {
             "host": "x86_64-pc-linux-gnu",
             "url": "http://downloads.arduino.cc/tools/bossac-1.9.1-arduino1-linux64.tar.gz",
             "archiveFileName": "bossac-1.9.1-arduino1-linux64.tar.gz",
+            "size": "399453",
             "checksum": "SHA-256:d3d324a3503a8db825c01f3b38519e4d4824c4d0e42cb399a16c1e074f9a9a86"
           }
         ]
